internal/gatewayapi/testdata/securitypolicy-with-cors-invalid-origin-regexes.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: default
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    parentRefs:
    - name: gateway-1
    rules:
    - matches:
      - path:
          value: /foo
      backendRefs:
      - name: service-1
        port: 8080
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-2
  spec:
    parentRefs:
    - name: gateway-1
    rules:
    - matches:
      - path:
          value: /bar
      backendRefs:
      - name: service-1
        port: 8080
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: default
    name: policy-for-gateway-1
  spec:
    targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
    cors:
      allowOrigins:
      - https://app.example.com
      allowOriginRegexes:
      - '['
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: default
    name: policy-for-route-1
  spec:
    targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-2
    cors:
      allowOriginRegexes:
      - '[^/]+'
